--- a/index.html
+++ b/index.html
@@ -1,63 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AL-NOOR PUBLIC SCHOOL MANGLOUR</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AL-NOOR PUBLIC SCHOOL MANGLOUR</title>
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Font Awesome for Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<!-- Font Awesome for Icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-  <style>
-    :root{
-      --green:#0a8a3a;
-      --green-dark:#066b2c;
-      --light:#f7fff8;
-    }
-    body{margin:0;font-family:'Poppins',sans-serif;background:var(--light);color:#222}
+<style>
+  :root{
+    --green:#0a8a3a;
+    --green-dark:#066b2c;
+    --light:#f7fff8;
+  }
+  *{box-sizing:border-box}
+  body{margin:0;font-family:'Poppins',sans-serif;background:var(--light);color:#222}
 
-    /* HEADER */
-    header{background:var(--green);position:sticky;top:0;z-index:100;box-shadow:0 3px 12px rgba(0,0,0,.15)}
-    nav{max-width:1200px;margin:auto;display:flex;justify-content:space-between;align-items:center;padding:14px 20px;color:#fff}
-    nav .logo{display:flex;align-items:center;gap:10px;font-weight:700;font-size:20px}
-    nav .logo img{height:45px}
-    nav a{color:#fff;text-decoration:none;margin-left:16px;font-weight:500;cursor:pointer}
+  /* HEADER */
+  header{background:var(--green);position:sticky;top:0;z-index:100;box-shadow:0 3px 12px rgba(0,0,0,.15)}
+  nav{max-width:1200px;margin:auto;display:flex;justify-content:space-between;align-items:center;padding:14px 20px;color:#fff}
+  nav .logo{display:flex;align-items:center;gap:10px;font-weight:700;font-size:20px}
+  nav .logo img{height:45px}
+  nav a{color:#fff;text-decoration:none;margin-left:16px;font-weight:500;cursor:pointer}
 
-    /* HERO */
-    .hero{height:85vh;background:linear-gradient(rgba(0,0,0,.45),rgba(0,0,0,.55)),url('https://images.unsplash.com/photo-1588072432836-e10032774350?auto=format&fit=crop&w=1600&q=80');background-size:cover;background-position:center;display:flex;align-items:center;justify-content:center;text-align:center;color:#fff;padding:20px}
-    .hero h1{font-size:48px;font-weight:700}
-    .hero p{font-size:20px;max-width:800px;margin:auto}
-    .btn{display:inline-block;margin-top:15px;padding:14px 34px;background:var(--green);color:#fff;text-decoration:none;border-radius:6px;font-size:18px}
+  /* HERO */
+  .hero{height:85vh;background:linear-gradient(rgba(0,0,0,.45),rgba(0,0,0,.55)),url('https://images.unsplash.com/photo-1588072432836-e10032774350?auto=format&fit=crop&w=1600&q=80');background-size:cover;background-position:center;display:flex;align-items:center;justify-content:center;text-align:center;color:#fff;padding:20px}
+  .hero h1{font-size:48px;font-weight:700}
+  .hero p{font-size:20px;max-width:800px;margin:auto}
+  .btn{display:inline-block;margin-top:15px;padding:14px 34px;background:var(--green);color:#fff;text-decoration:none;border-radius:6px;font-size:18px}
 
-    /* SECTIONS */
-    .container{max-width:1200px;margin:auto;padding:60px 20px}
-    h2{text-align:center;color:var(--green)}
-    .section-text{text-align:center;max-width:900px;margin:20px auto;font-size:18px;color:#444}
+  /* SECTIONS */
+  .container{max-width:1200px;margin:auto;padding:60px 20px}
+  h2{text-align:center;color:var(--green)}
+  .section-text{text-align:center;max-width:900px;margin:20px auto;font-size:18px;color:#444}
 
-    /* FEATURES */
-    .features{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:25px;margin-top:40px}
-    .feature-box{background:#eaffea;padding:30px;border-radius:12px;text-align:center;border:1px solid #c8f5d4;font-size:18px;font-weight:500;color:#066b2c}
+  /* FEATURES */
+  .features{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:25px;margin-top:40px}
+  .feature-box{background:#eaffea;padding:30px;border-radius:12px;text-align:center;border:1px solid #c8f5d4;font-size:18px;font-weight:500;color:#066b2c}
 
-    /* GALLERY */
-    .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:15px;margin-top:30px}
-    .gallery img{width:100%;border-radius:10px}
+  /* SLIDERS */
+  .slider-container{position:relative;overflow:hidden;margin-top:40px}
+  .slider-track{display:flex;transition:transform 0.5s ease-in-out}
+  .slide{min-width:100%;box-sizing:border-box;padding:20px;display:flex;justify-content:center;gap:20px;flex-wrap:wrap}
+  .slide .card{background:#fff;padding:20px;border-radius:12px;box-shadow:0 5px 15px rgba(0,0,0,0.1);text-align:center;flex:1 1 200px}
+  .slide .card img{width:120px;height:120px;border-radius:50%;object-fit:cover;margin-bottom:12px}
+  .slide .card h4{margin:5px 0;color:var(--green)}
+  .slide .card p{font-size:14px;color:#555}
 
-    /* FORM */
-    #admission-form{display:none;max-width:800px;margin:40px auto;background:#fff;padding:30px;border-radius:14px;box-shadow:0 6px 20px rgba(0,0,0,.08)}
-    #admission-form input,#admission-form select,#admission-form textarea{width:100%;padding:12px;margin:8px 0;border:1px solid #ccc;border-radius:6px}
-    #admission-form button{width:100%;padding:14px;background:var(--green);color:#fff;border:none;border-radius:6px;font-size:18px;cursor:pointer}
+  .slider-buttons{text-align:center;margin-top:15px}
+  .slider-buttons button{background:var(--green);color:#fff;border:none;padding:10px 15px;margin:0 5px;border-radius:6px;cursor:pointer}
 
-    /* FOOTER */
-    footer{background:var(--green);color:#fff;padding:40px 20px;margin-top:60px}
-    .footer-grid{max-width:1200px;margin:auto;display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:30px}
-    .social a{color:#fff;font-size:22px;margin-right:12px}
-    .whatsapp{display:inline-block;margin-top:10px;padding:10px 18px;background:#25D366;color:#fff;border-radius:6px;text-decoration:none}
+  /* GALLERY */
+  .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:15px;margin-top:30px}
+  .gallery img{width:100%;border-radius:10px}
 
-    @media(max-width:768px){.hero h1{font-size:34px}}
-  </style>
+  /* MODAL FORM */
+  .modal{display:none;position:fixed;z-index:1000;left:0;top:0;width:100%;height:100%;overflow:auto;background:rgba(0,0,0,0.6)}
+  .modal-content{background:#fff;margin:10% auto;padding:30px;border-radius:14px;max-width:600px;position:relative}
+  .modal-content input,.modal-content select,.modal-content textarea{width:100%;padding:12px;margin:8px 0;border:1px solid #ccc;border-radius:6px}
+  .modal-content button{width:100%;padding:14px;background:var(--green);color:#fff;border:none;border-radius:6px;font-size:18px;cursor:pointer}
+  .close-btn{position:absolute;top:10px;right:15px;font-size:28px;font-weight:bold;color:#333;cursor:pointer}
+
+  /* FOOTER */
+  footer{background:var(--green);color:#fff;padding:40px 20px;margin-top:60px}
+  .footer-grid{max-width:1200px;margin:auto;display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:30px}
+  .social a{color:#fff;font-size:22px;margin-right:12px}
+  .whatsapp{display:inline-block;margin-top:10px;padding:10px 18px;background:#25D366;color:#fff;border-radius:6px;text-decoration:none}
+
+  @media(max-width:768px){.hero h1{font-size:34px}}
+</style>
 </head>
 <body>
 
@@ -70,6 +85,7 @@
     <div>
       <a href="#home">Home</a>
       <a onclick="scrollToSection('about')">About Us</a>
+      <a onclick="scrollToSection('teachers')">Teachers</a>
       <a onclick="scrollToSection('gallery')">Gallery</a>
       <a onclick="scrollToSection('contact')">Contact</a>
     </div>
@@ -98,33 +114,109 @@
   </div>
 </section>
 
-<section class="container" id="gallery">
-  <h2>Gallery</h2>
-  <div class="gallery">
-    <img src="https://via.placeholder.com/400x250">
-    <img src="https://via.placeholder.com/400x250">
-    <img src="https://via.placeholder.com/400x250">
-    <img src="https://via.placeholder.com/400x250">
+<section class="container" id="teachers">
+  <h2>Meet Our Teachers</h2>
+  <div class="slider-container">
+    <div class="slider-track">
+      <div class="slide">
+        <div class="card"><img src="https://via.placeholder.com/120" alt="Principal"><h4>Principal: Nuzhat Saifi</h4><p>10 years experience</p></div>
+        <div class="card"><img src="https://via.placeholder.com/120" alt="Manager"><h4>Manager: Mohd Shahzad</h4><p>10 years experience</p></div>
+        <div class="card"><img src="https://via.placeholder.com/120" alt="Manager"><h4>Manager: Mohd Sajid</h4><p>10 years experience</p></div>
+      </div>
+      <div class="slide">
+        <div class="card"><img src="https://via.placeholder.com/120" alt="Teacher"><h4>Misba</h4><p>6 years experience</p></div>
+        <div class="card"><img src="https://via.placeholder.com/120" alt="Teacher"><h4>Arshad</h4><p>15 years experience</p></div>
+        <div class="card"><img src="https://via.placeholder.com/120" alt="Teacher"><h4>Shayma</h4><p>5 years experience</p></div>
+      </div>
+    </div>
+    <div class="slider-buttons">
+      <button onclick="prevSlide('teachers')">&#10094;</button>
+      <button onclick="nextSlide('teachers')">&#10095;</button>
+    </div>
   </div>
 </section>
 
-<section id="admission-form">
-  <h2>Admission Form</h2>
-  <form action="#" method="post">
-    <input type="text" placeholder="First Name" required>
-    <input type="text" placeholder="Last Name" required>
-    <select required><option value="">Gender</option><option>Male</option><option>Female</option></select>
-    <input type="tel" placeholder="Phone Number" required>
-    <input type="text" placeholder="Father's Name">
-    <input type="text" placeholder="Mother's Name">
-    <select><option value="">Applying Class</option><option>Nursery</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option></select>
-    <input type="text" placeholder="Previous Class Passed">
-    <input type="text" placeholder="Aadhar Number">
-    <input type="file">
-    <textarea placeholder="Address"></textarea>
-    <button type="submit">Submit Application</button>
-  </form>
+<section class="container" id="testimonials">
+  <h2>What Parents Say!</h2>
+  <div class="slider-container">
+    <div class="slider-track" id="testimonial-track">
+      <div class="slide">
+        <div class="card"><p>"Al-Noor is an amazing school! My child loves going here every day."</p><h4>- Parent 1</h4></div>
+        <div class="card"><p>"The teachers are very caring and the campus is safe. Highly recommend."</p><h4>- Parent 2</h4></div>
+      </div>
+      <div class="slide">
+        <div class="card"><p>"Best experience my child ever had. Excellent education and values."</p><h4>- Parent 3</h4></div>
+      </div>
+    </div>
+    <div class="slider-buttons">
+      <button onclick="prevSlide('testimonial')">&#10094;</button>
+      <button onclick="nextSlide('testimonial')">&#10095;</button>
+    </div>
+  </div>
 </section>
+
+<section class="container" id="blog">
+  <h2>Latest Articles From Blog</h2>
+  <div class="cards">
+    <div class="card">
+      <h4>Importance of Early Education</h4>
+      <p>Learn why early childhood education sets the foundation for lifelong learning.</p>
+    </div>
+    <div class="card">
+      <h4>Tips for Parents</h4>
+      <p>How parents can support their child's learning at home effectively.</p>
+    </div>
+  </div>
+</section>
+
+<section class="container" id="classes">
+  <h2>Classes for Your Kids</h2>
+  <div class="cards">
+    <div class="card">
+      <h4>Nursery</h4>
+      <p>Fun learning for your little ones to build curiosity and creativity.</p>
+    </div>
+    <div class="card">
+      <h4>Primary Classes</h4>
+      <p>Comprehensive curriculum for grades 1-5 with experienced teachers.</p>
+    </div>
+    <div class="card">
+      <h4>Middle Classes</h4>
+      <p>Grades 6-8 focusing on academics and holistic development.</p>
+    </div>
+    <div class="card">
+      <h4>High School</h4>
+      <p>Grades 9-10 preparing students for board exams and future success.</p>
+    </div>
+  </div>
+</section>
+
+<section class="container" id="best-school">
+  <h2>Best School For Your Kids</h2>
+  <p class="section-text">Al-Noor Public School offers an ideal environment for children to grow academically, socially, and emotionally. Join us to give your child the best education experience.</p>
+</section>
+
+<!-- MODAL FORM -->
+<div id="admission-modal" class="modal">
+  <div class="modal-content">
+    <span class="close-btn" onclick="closeAdmissionForm()">&times;</span>
+    <h2>Admission Form</h2>
+    <form action="#" method="post">
+      <input type="text" placeholder="First Name" required>
+      <input type="text" placeholder="Last Name" required>
+      <select required><option value="">Gender</option><option>Male</option><option>Female</option></select>
+      <input type="tel" placeholder="Phone Number" required>
+      <input type="text" placeholder="Father's Name">
+      <input type="text" placeholder="Mother's Name">
+      <select><option value="">Applying Class</option><option>Nursery</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option></select>
+      <input type="text" placeholder="Previous Class Passed">
+      <input type="text" placeholder="Aadhar Number">
+      <input type="file">
+      <textarea placeholder="Address"></textarea>
+      <button type="submit">Submit Application</button>
+    </form>
+  </div>
+</div>
 
 <footer id="contact">
   <div class="footer-grid">
@@ -151,13 +243,36 @@
 </footer>
 
 <script>
-  function openAdmissionForm() {
-    document.getElementById('admission-form').scrollIntoView({behavior:'smooth'});
-    document.getElementById('admission-form').style.display = 'block';
-  }
+  // MODAL
+  function openAdmissionForm(){document.getElementById('admission-modal').style.display='block'}
+  function closeAdmissionForm(){document.getElementById('admission-modal').style.display='none'}
+  window.onclick = function(event){if(event.target==document.getElementById('admission-modal')){closeAdmissionForm()}}
 
-  function scrollToSection(id) {
-    document.getElementById(id).scrollIntoView({behavior:'smooth'});
+  // SCROLL
+  function scrollToSection(id){document.getElementById(id).scrollIntoView({behavior:'smooth'})}
+
+  // SLIDER
+  let teacherSlideIndex=0,testimonialSlideIndex=0
+  const teacherTrack=document.querySelector('#teachers .slider-track')
+  const testimonialTrack=document.getElementById('testimonial-track')
+
+  function nextSlide(type){
+    if(type==='teachers'){
+      teacherSlideIndex=(teacherSlideIndex+1)%teacherTrack.children.length
+      teacherTrack.style.transform=`translateX(-${teacherSlideIndex*100}%)`
+    }else{
+      testimonialSlideIndex=(testimonialSlideIndex+1)%testimonialTrack.children.length
+      testimonialTrack.style.transform=`translateX(-${testimonialSlideIndex*100}%)`
+    }
+  }
+  function prevSlide(type){
+    if(type==='teachers'){
+      teacherSlideIndex=(teacherSlideIndex-1+teacherTrack.children.length)%teacherTrack.children.length
+      teacherTrack.style.transform=`translateX(-${teacherSlideIndex*100}%)`
+    }else{
+      testimonialSlideIndex=(testimonialSlideIndex-1+testimonialTrack.children.length)%testimonialTrack.children.length
+      testimonialTrack.style.transform=`translateX(-${testimonialSlideIndex*100}%)`
+    }
   }
 </script>
 
