--- a/index.html
+++ b/index.html
@@ -5,277 +5,230 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>AL-NOOR PUBLIC SCHOOL MANGLOUR</title>
 
-<!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-<!-- Font Awesome for Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
-  :root{
-    --green:#0a8a3a;
-    --green-dark:#066b2c;
-    --light:#f7fff8;
-  }
-  *{box-sizing:border-box}
-  body{margin:0;font-family:'Poppins',sans-serif;background:var(--light);color:#222}
+:root{
+  --green:#0a8a3a;
+  --light:#f6fff7;
+}
+*{box-sizing:border-box}
+body{margin:0;font-family:Poppins,sans-serif;background:var(--light)}
 
-  /* HEADER */
-  header{background:var(--green);position:sticky;top:0;z-index:100;box-shadow:0 3px 12px rgba(0,0,0,.15)}
-  nav{max-width:1200px;margin:auto;display:flex;justify-content:space-between;align-items:center;padding:14px 20px;color:#fff}
-  nav .logo{display:flex;align-items:center;gap:10px;font-weight:700;font-size:20px}
-  nav .logo img{height:45px}
-  nav a{color:#fff;text-decoration:none;margin-left:16px;font-weight:500;cursor:pointer}
+header{background:var(--green);position:sticky;top:0;z-index:999}
+nav{max-width:1200px;margin:auto;display:flex;justify-content:space-between;align-items:center;padding:15px;color:#fff}
+nav a{color:#fff;margin-left:15px;text-decoration:none;font-weight:500;cursor:pointer}
 
-  /* HERO */
-  .hero{height:85vh;background:linear-gradient(rgba(0,0,0,.45),rgba(0,0,0,.55)),url('https://images.unsplash.com/photo-1588072432836-e10032774350?auto=format&fit=crop&w=1600&q=80');background-size:cover;background-position:center;display:flex;align-items:center;justify-content:center;text-align:center;color:#fff;padding:20px}
-  .hero h1{font-size:48px;font-weight:700}
-  .hero p{font-size:20px;max-width:800px;margin:auto}
-  .btn{display:inline-block;margin-top:15px;padding:14px 34px;background:var(--green);color:#fff;text-decoration:none;border-radius:6px;font-size:18px}
+.hero{
+  height:85vh;
+  background:url("https://images.unsplash.com/photo-1588072432836-e10032774350") center/cover;
+  display:flex;align-items:center;justify-content:center;
+  text-align:center;color:#fff;
+}
+.hero h1{font-size:48px;animation:fadeIn 2s}
+.hero p{font-size:20px}
+.btn{background:var(--green);padding:14px 30px;color:#fff;border-radius:6px;text-decoration:none}
 
-  /* SECTIONS */
-  .container{max-width:1200px;margin:auto;padding:60px 20px}
-  h2{text-align:center;color:var(--green)}
-  .section-text{text-align:center;max-width:900px;margin:20px auto;font-size:18px;color:#444}
+@keyframes fadeIn{
+  from{opacity:0;transform:translateY(20px)}
+  to{opacity:1;transform:translateY(0)}
+}
 
-  /* FEATURES */
-  .features{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:25px;margin-top:40px}
-  .feature-box{background:#eaffea;padding:30px;border-radius:12px;text-align:center;border:1px solid #c8f5d4;font-size:18px;font-weight:500;color:#066b2c}
+.container{max-width:1200px;margin:auto;padding:60px 20px}
+h2{text-align:center;color:var(--green)}
 
-  /* SLIDERS */
-  .slider-container{position:relative;overflow:hidden;margin-top:40px}
-  .slider-track{display:flex;transition:transform 0.5s ease-in-out}
-  .slide{min-width:100%;box-sizing:border-box;padding:20px;display:flex;justify-content:center;gap:20px;flex-wrap:wrap}
-  .slide .card{background:#fff;padding:20px;border-radius:12px;box-shadow:0 5px 15px rgba(0,0,0,0.1);text-align:center;flex:1 1 200px}
-  .slide .card img{width:120px;height:120px;border-radius:50%;object-fit:cover;margin-bottom:12px}
-  .slide .card h4{margin:5px 0;color:var(--green)}
-  .slide .card p{font-size:14px;color:#555}
+.features{
+  display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+  gap:20px;margin-top:40px
+}
+.feature{background:#eaffea;padding:25px;border-radius:12px;text-align:center}
 
-  .slider-buttons{text-align:center;margin-top:15px}
-  .slider-buttons button{background:var(--green);color:#fff;border:none;padding:10px 15px;margin:0 5px;border-radius:6px;cursor:pointer}
+.slider{overflow:hidden;position:relative}
+.track{display:flex;transition:0.6s}
+.slide{min-width:100%;display:flex;gap:20px;justify-content:center;flex-wrap:wrap}
 
-  /* GALLERY */
-  .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:15px;margin-top:30px}
-  .gallery img{width:100%;border-radius:10px}
+.card{
+  background:#fff;padding:20px;border-radius:12px;
+  box-shadow:0 8px 20px rgba(0,0,0,.1);
+  text-align:center;width:250px
+}
+.card img{
+  width:120px;height:120px;border-radius:50%;
+  object-fit:cover;margin-bottom:10px
+}
+.controls{text-align:center;margin-top:15px}
+.controls button{
+  background:var(--green);color:#fff;border:none;
+  padding:10px 14px;border-radius:6px;margin:0 5px
+}
 
-  /* MODAL FORM */
-  .modal{display:none;position:fixed;z-index:1000;left:0;top:0;width:100%;height:100%;overflow:auto;background:rgba(0,0,0,0.6)}
-  .modal-content{background:#fff;margin:10% auto;padding:30px;border-radius:14px;max-width:600px;position:relative}
-  .modal-content input,.modal-content select,.modal-content textarea{width:100%;padding:12px;margin:8px 0;border:1px solid #ccc;border-radius:6px}
-  .modal-content button{width:100%;padding:14px;background:var(--green);color:#fff;border:none;border-radius:6px;font-size:18px;cursor:pointer}
-  .close-btn{position:absolute;top:10px;right:15px;font-size:28px;font-weight:bold;color:#333;cursor:pointer}
+/* Gallery */
+.gallery img{
+  width:300px;border-radius:12px;
+  transition:.3s
+}
+.gallery img:hover{transform:scale(1.05)}
 
-  /* FOOTER */
-  footer{background:var(--green);color:#fff;padding:40px 20px;margin-top:60px}
-  .footer-grid{max-width:1200px;margin:auto;display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:30px}
-  .social a{color:#fff;font-size:22px;margin-right:12px}
-  .whatsapp{display:inline-block;margin-top:10px;padding:10px 18px;background:#25D366;color:#fff;border-radius:6px;text-decoration:none}
+/* Modal */
+.modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,.6)}
+.modal-box{
+  background:#fff;max-width:600px;margin:5% auto;
+  padding:30px;border-radius:12px;position:relative
+}
+.close{position:absolute;top:10px;right:15px;font-size:26px;cursor:pointer}
+input,select,textarea{
+  width:100%;padding:12px;margin:6px 0;border-radius:6px;border:1px solid #ccc
+}
 
-  @media(max-width:768px){.hero h1{font-size:34px}}
+footer{background:var(--green);color:#fff;padding:40px 20px}
+.footer-grid{max-width:1200px;margin:auto;display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:30px}
+
+@media(max-width:768px){
+  .hero h1{font-size:32px}
+}
 </style>
 </head>
+
 <body>
 
 <header>
-  <nav>
-    <div class="logo">
-      <img src="https://via.placeholder.com/80x80?text=LOGO" alt="School Logo">
-      AL-NOOR PUBLIC SCHOOL
-    </div>
-    <div>
-      <a href="#home">Home</a>
-      <a onclick="scrollToSection('about')">About Us</a>
-      <a onclick="scrollToSection('teachers')">Teachers</a>
-      <a onclick="scrollToSection('gallery')">Gallery</a>
-      <a onclick="scrollToSection('contact')">Contact</a>
-    </div>
-  </nav>
+<nav>
+  <strong>AL-NOOR PUBLIC SCHOOL</strong>
+  <div>
+    <a onclick="go('home')">Home</a>
+    <a onclick="go('about')">About</a>
+    <a onclick="go('teachers')">Teachers</a>
+    <a onclick="go('gallery')">Gallery</a>
+    <a onclick="go('contact')">Contact</a>
+  </div>
+</nav>
 </header>
 
 <section class="hero" id="home">
   <div>
-    <h1>Welcome to Al-Noor Public School Manglour</h1>
-    <p>Empowering Young Minds for a Brighter Future. Where Quality Education Meets Care and Discipline</p>
-    <a onclick="openAdmissionForm()" class="btn">Apply for Admission</a>
+    <h1>Best School For Your Kids</h1>
+    <p>Quality Education • Discipline • Values</p><br>
+    <a class="btn" onclick="openForm()">Apply for Admission</a>
   </div>
 </section>
 
 <section class="container" id="about">
-  <h2>About Us</h2>
-  <p class="section-text">At Al-Noor Public School, we nurture every child with love and provide holistic education from Nursery to Class 10. Our mission is to build confident, disciplined, and responsible citizens through innovative learning and strong values.</p>
+<h2>About Us</h2>
+<p style="text-align:center">
+Al-Noor Public School Manglour provides quality education from Nursery to Class 10 with discipline, safety and values.
+</p>
 </section>
 
 <section class="container">
-  <h2>Why Choose Us</h2>
-  <div class="features">
-    <div class="feature-box">📘 Excellence in Quality Education – Learning Beyond Books</div>
-    <div class="feature-box">🏫 Safe & Secure Campus – Your Child’s Safety is Our Priority</div>
-    <div class="feature-box">🎓 Nursery to Class 10 – Comprehensive Curriculum for Every Stage</div>
-  </div>
+<h2>Why Choose Us</h2>
+<div class="features">
+  <div class="feature">📘 Quality Education</div>
+  <div class="feature">🏫 Safe Campus</div>
+  <div class="feature">🎓 Nursery to Class 10</div>
+</div>
 </section>
 
 <section class="container" id="teachers">
-  <h2>Meet Our Teachers</h2>
-  <div class="slider-container">
-    <div class="slider-track">
-      <div class="slide">
-        <div class="card"><img src="https://via.placeholder.com/120" alt="Principal"><h4>Principal: Nuzhat Saifi</h4><p>10 years experience</p></div>
-        <div class="card"><img src="https://via.placeholder.com/120" alt="Manager"><h4>Manager: Mohd Shahzad</h4><p>10 years experience</p></div>
-        <div class="card"><img src="https://via.placeholder.com/120" alt="Manager"><h4>Manager: Mohd Sajid</h4><p>10 years experience</p></div>
-      </div>
-      <div class="slide">
-        <div class="card"><img src="https://via.placeholder.com/120" alt="Teacher"><h4>Misba</h4><p>6 years experience</p></div>
-        <div class="card"><img src="https://via.placeholder.com/120" alt="Teacher"><h4>Arshad</h4><p>15 years experience</p></div>
-        <div class="card"><img src="https://via.placeholder.com/120" alt="Teacher"><h4>Shayma</h4><p>5 years experience</p></div>
-      </div>
-    </div>
-    <div class="slider-buttons">
-      <button onclick="prevSlide('teachers')">&#10094;</button>
-      <button onclick="nextSlide('teachers')">&#10095;</button>
-    </div>
+<h2>Meet Our Teachers</h2>
+<div class="slider">
+<div class="track" id="tTrack">
+<div class="slide">
+  <div class="card">
+    <img src="https://randomuser.me/api/portraits/women/65.jpg">
+    <h4>Principal<br>Nuzhat Saifi</h4><p>10 Years</p>
   </div>
-</section>
-
-<section class="container" id="testimonials">
-  <h2>What Parents Say!</h2>
-  <div class="slider-container">
-    <div class="slider-track" id="testimonial-track">
-      <div class="slide">
-        <div class="card"><p>"Al-Noor is an amazing school! My child loves going here every day."</p><h4>- Parent 1</h4></div>
-        <div class="card"><p>"The teachers are very caring and the campus is safe. Highly recommend."</p><h4>- Parent 2</h4></div>
-      </div>
-      <div class="slide">
-        <div class="card"><p>"Best experience my child ever had. Excellent education and values."</p><h4>- Parent 3</h4></div>
-      </div>
-    </div>
-    <div class="slider-buttons">
-      <button onclick="prevSlide('testimonial')">&#10094;</button>
-      <button onclick="nextSlide('testimonial')">&#10095;</button>
-    </div>
+  <div class="card">
+    <img src="https://randomuser.me/api/portraits/men/32.jpg">
+    <h4>Manager<br>Mohd Shahzad</h4><p>10 Years</p>
   </div>
-</section>
-
-<section class="container" id="blog">
-  <h2>Latest Articles From Blog</h2>
-  <div class="cards">
-    <div class="card">
-      <h4>Importance of Early Education</h4>
-      <p>Learn why early childhood education sets the foundation for lifelong learning.</p>
-    </div>
-    <div class="card">
-      <h4>Tips for Parents</h4>
-      <p>How parents can support their child's learning at home effectively.</p>
-    </div>
-  </div>
-</section>
-
-<section class="container" id="classes">
-  <h2>Classes for Your Kids</h2>
-  <div class="cards">
-    <div class="card">
-      <h4>Nursery</h4>
-      <p>Fun learning for your little ones to build curiosity and creativity.</p>
-    </div>
-    <div class="card">
-      <h4>Primary Classes</h4>
-      <p>Comprehensive curriculum for grades 1-5 with experienced teachers.</p>
-    </div>
-    <div class="card">
-      <h4>Middle Classes</h4>
-      <p>Grades 6-8 focusing on academics and holistic development.</p>
-    </div>
-    <div class="card">
-      <h4>High School</h4>
-      <p>Grades 9-10 preparing students for board exams and future success.</p>
-    </div>
-  </div>
-</section>
-
-<section class="container" id="best-school">
-  <h2>Best School For Your Kids</h2>
-  <p class="section-text">Al-Noor Public School offers an ideal environment for children to grow academically, socially, and emotionally. Join us to give your child the best education experience.</p>
-</section>
-
-<!-- MODAL FORM -->
-<div id="admission-modal" class="modal">
-  <div class="modal-content">
-    <span class="close-btn" onclick="closeAdmissionForm()">&times;</span>
-    <h2>Admission Form</h2>
-    <form action="#" method="post">
-      <input type="text" placeholder="First Name" required>
-      <input type="text" placeholder="Last Name" required>
-      <select required><option value="">Gender</option><option>Male</option><option>Female</option></select>
-      <input type="tel" placeholder="Phone Number" required>
-      <input type="text" placeholder="Father's Name">
-      <input type="text" placeholder="Mother's Name">
-      <select><option value="">Applying Class</option><option>Nursery</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option></select>
-      <input type="text" placeholder="Previous Class Passed">
-      <input type="text" placeholder="Aadhar Number">
-      <input type="file">
-      <textarea placeholder="Address"></textarea>
-      <button type="submit">Submit Application</button>
-    </form>
+  <div class="card">
+    <img src="https://randomuser.me/api/portraits/men/45.jpg">
+    <h4>Manager<br>Mohd Sajid</h4><p>10 Years</p>
   </div>
 </div>
 
-<footer id="contact">
-  <div class="footer-grid">
-    <div>
-      <h3>GET IN TOUCH</h3>
-      <p>Mohalla Bahar Qila, Malakpura Road, Manglour</p>
-      <p>📞 +91-7017152544<br>📞 +91-8439221040</p>
-      <p>✉ apschool@gmail.com</p>
-    </div>
-    <div>
-      <h3>CONNECT WITH US</h3>
-      <div class="social">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-x-twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
-      </div>
-      <a class="whatsapp" href="https://wa.me/917017152544">WhatsApp Visit Website</a><br>
-      <a class="whatsapp" href="https://wa.me/918439221040">WhatsApp Visit Website</a>
-    </div>
+<div class="slide">
+  <div class="card">
+    <img src="https://randomuser.me/api/portraits/women/44.jpg">
+    <h4>Misba</h4><p>6 Years</p>
   </div>
-  <p style="text-align:center;margin-top:30px">© 2025 AL-NOOR PUBLIC SCHOOL MANGLOUR</p>
+  <div class="card">
+    <img src="https://randomuser.me/api/portraits/men/78.jpg">
+    <h4>Arshad</h4><p>15 Years</p>
+  </div>
+  <div class="card">
+    <img src="https://randomuser.me/api/portraits/women/52.jpg">
+    <h4>Shayma</h4><p>5 Years</p>
+  </div>
+</div>
+</div>
+</div>
+<div class="controls">
+<button onclick="slideT(-1)">❮</button>
+<button onclick="slideT(1)">❯</button>
+</div>
+</section>
+
+<section class="container" id="gallery">
+<h2>Gallery</h2>
+<div class="gallery slide">
+<img src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf">
+<img src="https://images.unsplash.com/photo-1596495577886-d920f1fb7238">
+<img src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f">
+<img src="https://images.unsplash.com/photo-1509062522246-3755977927d7">
+</div>
+</section>
+
+<section class="container">
+<h2>What Parents Say</h2>
+<div class="slide">
+  <div class="card">"Best school environment."<br><b>- Parent</b></div>
+  <div class="card">"Teachers are very caring."<br><b>- Parent</b></div>
+</div>
+</section>
+
+<footer id="contact">
+<div class="footer-grid">
+<div>
+<h3>Contact</h3>
+<p>Manglour, Uttarakhand</p>
+<p>📞 7017152544</p>
+</div>
+<div>
+<h3>Social</h3>
+<i class="fab fa-facebook"></i>
+<i class="fab fa-instagram"></i>
+<i class="fab fa-youtube"></i>
+</div>
+</div>
+<p style="text-align:center">© 2025 AL-NOOR PUBLIC SCHOOL</p>
 </footer>
 
+<!-- MODAL -->
+<div class="modal" id="form">
+<div class="modal-box">
+<span class="close" onclick="closeForm()">×</span>
+<h2>Admission Form</h2>
+<input placeholder="Student Name">
+<input placeholder="Father Name">
+<input placeholder="Phone">
+<select><option>Class</option></select>
+<textarea placeholder="Address"></textarea>
+<button class="btn">Submit</button>
+</div>
+</div>
+
 <script>
-  // MODAL
-  function openAdmissionForm(){document.getElementById('admission-modal').style.display='block'}
-  function closeAdmissionForm(){document.getElementById('admission-modal').style.display='none'}
-  window.onclick = function(event){if(event.target==document.getElementById('admission-modal')){closeAdmissionForm()}}
-
-  // SCROLL
-  function scrollToSection(id){document.getElementById(id).scrollIntoView({behavior:'smooth'})}
-
-  // SLIDER
-  let teacherSlideIndex=0,testimonialSlideIndex=0
-  const teacherTrack=document.querySelector('#teachers .slider-track')
-  const testimonialTrack=document.getElementById('testimonial-track')
-
-  function nextSlide(type){
-    if(type==='teachers'){
-      teacherSlideIndex=(teacherSlideIndex+1)%teacherTrack.children.length
-      teacherTrack.style.transform=`translateX(-${teacherSlideIndex*100}%)`
-    }else{
-      testimonialSlideIndex=(testimonialSlideIndex+1)%testimonialTrack.children.length
-      testimonialTrack.style.transform=`translateX(-${testimonialSlideIndex*100}%)`
-    }
-  }
-  function prevSlide(type){
-    if(type==='teachers'){
-      teacherSlideIndex=(teacherSlideIndex-1+teacherTrack.children.length)%teacherTrack.children.length
-      teacherTrack.style.transform=`translateX(-${teacherSlideIndex*100}%)`
-    }else{
-      testimonialSlideIndex=(testimonialSlideIndex-1+testimonialTrack.children.length)%testimonialTrack.children.length
-      testimonialTrack.style.transform=`translateX(-${testimonialSlideIndex*100}%)`
-    }
-  }
+let t=0;
+function slideT(d){
+  t=(t+d+2)%2;
+  document.getElementById("tTrack").style.transform=`translateX(-${t*100}%)`;
+}
+function openForm(){document.getElementById("form").style.display="block"}
+function closeForm(){document.getElementById("form").style.display="none"}
+function go(id){document.getElementById(id).scrollIntoView({behavior:"smooth"})}
 </script>
 
 </body>
 </html>
-
